--- a/scripts/readme
+++ b/scripts/readme
@@ -1,1 +1,1 @@
-in house scripts used for molecular evolution analysis of no-model organisms 
+in-house scripts used for molecular evolution analysis of no-model organisms 
